# jni-demo

./: CMakeLists.txt  README.md  com_foo_Bar.cpp  com_foo_Bar.h
com/foo/: Bar.java
